# e2ee-rust

./: .gitignore  Cargo.toml  puml_server.sh  run_client.sh  run_server.sh
e2ee-rust-client-lib/: Cargo.toml
e2ee-rust-client-lib/src/: lib.rs
e2ee-rust-client-lib/src/commands/: ask_for_new_curve_onetime_prekeys.rs  ask_for_new_last_resort_pqkem_prekey.rs  ask_for_new_signed_pqkem_onetime_prekeys.rs  ask_for_new_signed_prekey.rs  ask_for_registration_bundle.rs  handler.rs  mod.rs
e2ee-rust-common/: Cargo.toml  build.rs
e2ee-rust-common/src/: lib.rs
e2ee-rust-common/src/crypto/: mod.rs  traits.rs
e2ee-rust-common/src/crypto/aead/: aes256gcm.rs  enum_aead_types.rs  mod.rs  traits.rs
e2ee-rust-common/src/errors/: aead.rs  diffie_hellman.rs  encoding.rs  general.rs  mod.rs  pqkem.rs  protobuf.rs  xeddsa.rs  zmq.rs
e2ee-rust-common/src/hash/: enum_hash_types.rs  mod.rs
e2ee-rust-common/src/pqxdh/: first_message.rs  kdf.rs  mod.rs  one_time_curve_prekey_set.rs  prekey_bundle.rs  private_bundle.rs  registration_bundle.rs  signed_curve_prekey.rs  signed_one_time_pqkem_prekey_set.rs  signed_pqkem_prekey.rs
e2ee-rust-common/src/protobuf/: mod.rs  utils.rs
e2ee-rust-common/src/storage/: errors.rs  mod.rs  storage_interface.rs
e2ee-rust-common/src/utils/: display.rs
e2ee-rust-server/: Cargo.toml
e2ee-rust-server/docs/: connect-flow.puml  first-message.puml  peer-prekey-bundle.puml
e2ee-rust-server/src/: main.rs  utils.rs
e2ee-rust-server/src/handles/: client_hello.rs  client_message.rs  mod.rs  new_keys.rs  registration_bundle.rs  request_peer_bundle.rs
(+75 files in other folders)
