[package]
name = "e2ee-rust-common"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.3"
pqc_kyber = { version = "0.7.1", features = ["std", "zeroize", "kyber512", "90s-fixslice"] }
rand = "0.8"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
xeddsa = "1.0.2"
uuid = { version = "1.0", features = ["v4"] }
hkdf = "0.12.4"
zeroize = "1.8.1"
sha2 = "0.10.8"
log = "0.4.26"
env_logger = "0.11.7"
aes-gcm = "0.10.3"
prost = "0.13.5"
chrono = "0.4.41"

[build-dependencies]
prost-build = "0.13.5"