[package]
name = "e2ee-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
e2ee-rust-common = { path = "../e2ee-rust-common" }
e2ee-rust-sqlite-storage = { path = "../e2ee-rust-sqlite-storage" }
zmq = "0.10.0"
log = "0.4.26"
env_logger = "0.11.7"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4.41"
